labs/50_network_policy/networkpolicy-redis.yml
---
# Source: envoyage/templates/networkpolicy-redis.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoyage-to-redis
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: envoyage
      ports:
        - protocol: TCP
          port: 6379
