labs/50_network_policy/networpolicy-default.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-except-cluster-and-private-network
spec:
  podSelector: {}
  policyTypes:
    - Ingress
